# kata

./: .gitignore  README.md  accumulate_demo.py  pyproject.toml  t.md
3d/: .gitignore  main.js  package-lock.json
architecture/: layers.py  microservices.md  mvp.js  pipes_filters.py  pipes_filters_2.py  single-server-setup.md
compress/: compress.py
computer/: cpu.py
cpp/: main  main.cpp
data-structure-and-algorithm/: algorithm_analysis.py  binary_search.py  double_linked_list.py  dynamic_array.py  hash_table.py  lru_cache.py  ordered_array.py  postorder.py  reverse_linked_list.py  single_linked_list.py  two_pointer.py
data-structure-and-algorithm/ds-algo-visual/: README.md  index.html  package-lock.json  package.json
data-structure-and-algorithm/graph-search-visualize/: .gitignore  index.html  package-lock.json  package.json
datastructure/: double_linked_list.py  hash_table.py
design-pattern/: observer_fn.py  observer_oo.py  strategy_fn.py  strategy_oo.py  template_method_fn.py  template_method_oo.py
designPattern/: factoryMethod.py
domain-driven-design/: functional.py
domain-specific/rate-limiter/: Cargo.toml  README.md
domain-specific/shop/server/: pyproject.toml
domain-specific/shop/server/src/server/: __init__.py
html/: backend.js  index.html  package-lock.json  package.json  turnstile.html
htmx/: main.py
internet/: internet.py
simple/: Machine.py  simple.py
software-engineering/: software-testing.md  test_args.py
test_simple/: test_Machine.py  test_simple.py
vue/: miniObserver.test.js  package-lock.json  package.json
(+69 files in other folders)
